--- a/index.ipynb
+++ b/index.ipynb
@@ -348,11 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287651"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = 287651\n",
     "los_cabos_pop # 287651"
    ]
   },
